<resources>
    <string name="app_name">BlueConnect</string>
    <string name="textTitre">Bienvenue sur cette application !</string>
    <string name="textDC">Appareils connu</string>

    <!-- Configuration appareil -->
    <string name="device_configuration.title">Configuration d\'un appareil</string>
    <string name="device_configuration.launchSection">Lancement des applications</string>
    <string name="device_configuration.radioManual">Manuel</string>
    <string name="device_configuration.radioAuto">Automatique</string>
    <string name="device_configuration.buttonValider">Valider</string>
    <string name="device_configuration.buttonAnnuler">Annuler</string>

    <!-- Launcher -->
    <string name="launcher.category.youtube">Youtube</string>
    <string name="launcher.category.gps">GPS</string>
    <string name="launcher.category.music">Musique</string>

    <!-- Les boutons -->
    <string name="text_btn_activer">ACTIVER</string>
    <string name="text_btn_afficher">AFFICHER</string>
    <string name="text_btn_rechercher">RECHERCHER</string>
    <string name="text_dispo">Appareils disponibles</string>
    <string name="text_btn_musique">Lancer la musique</string>
    <string name="text_btn_gps">Lancer le GPS</string>
    <string name="text_btn_youtube">Lancer Youtube</string>
</resources>
