<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lry.dip.bluetooth.main">

    <TextView
        android:id="@+id/textTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textTitre"
        android:textColor="@color/bleu_clair"
        android:textSize="@dimen/police_titre"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_btn_activer" />

        <Button
            android:id="@+id/buttonAffiche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_btn_afficher"
            tools:layout_editor_absoluteX="88dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/buttonRecherch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_btn_rechercher" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_devices_connu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <ListView
        android:id="@+id/listDevice"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </ListView>

    <TextView
        android:id="@+id/text_nouvel_appareil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_dispo" />

    <ListView
        android:id="@+id/listeNouvelAppareil"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
